# thorfin

./: Cargo.toml  README.md  io.github.vani1_2.thorfin.json  io.github.vani1_2.thorfin.yml  meson.build
src/: about.rs  app_display.rs  main.rs  window.rs
src/backend/: flathub.rs  install.rs  mod.rs  packagekit.rs
