[package]
name = "thorfin"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.10.3"
libadwaita = { version = "0.8.1", features = ["v1_6"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"